[BUG]35446-Buttons alignment are not proper(App Studio)

--- a/clients/EOXAppBuilder/view/apps/EOXAppBuilder/custom-components/install-manager/install-manager.scss
+++ b/clients/EOXAppBuilder/view/apps/EOXAppBuilder/custom-components/install-manager/install-manager.scss
@@ -131,4 +131,7 @@ $eox_theme : #275362;
       border-radius: 5px;
       cursor: pointer;
     }
+    .install-manager_submit{
+      margin-right: 2rem;
+    }
 }
